--- a/app/src/main/res/layout/contact_list_items.xml
+++ b/app/src/main/res/layout/contact_list_items.xml
@@ -2,9 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cvContact"
     android:layout_width="match_parent"
+
     android:layout_height="wrap_content"
     android:layout_margin="8dp">
+
     <TextView
         android:id="@+id/tvName"
         android:layout_width="45dp"
