--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -5,7 +5,7 @@
     android:id="@+id/cdContact"
 
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,8 +15,8 @@
             android:id="@+id/tvname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="160dp"
-            android:layout_marginEnd="148dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="136dp"
             app:layout_constraintEnd_toEndOf="parent"
 
             app:layout_constraintTop_toTopOf="parent"
@@ -48,8 +48,8 @@
             android:id="@+id/imageView"
             android:layout_width="146dp"
             android:layout_height="143dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="160dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
